--- a/PartyPlaylists/PartyPlaylists.MobileAppService/PartyPlaylists.MobileAppService.csproj
+++ b/PartyPlaylists/PartyPlaylists.MobileAppService/PartyPlaylists.MobileAppService.csproj
@@ -6,6 +6,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20190925070622_AddOwnerColumn.cs" />
+    <Compile Remove="Migrations\20190925070622_AddOwnerColumn.Designer.cs" />
+    <Compile Remove="Migrations\20190925070821_AddOwnerColumn.cs" />
+    <Compile Remove="Migrations\20190925070821_AddOwnerColumn.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.6" />
