--- a/PartyPlaylists.Web/PartyPlaylists.Web.csproj
+++ b/PartyPlaylists.Web/PartyPlaylists.Web.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PartyPlaylists\PartyPlaylists\PartyPlaylists.csproj" />
+  </ItemGroup>
+
 </Project>
