Add room controller to web project

--- a/PartyPlaylists/PartyPlaylists.Web/PartyPlaylists.Web.csproj
+++ b/PartyPlaylists/PartyPlaylists.Web/PartyPlaylists.Web.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PartyPlaylists\PartyPlaylists\PartyPlaylists.csproj" />
+    <ProjectReference Include="..\PartyPlaylists\PartyPlaylists.csproj" />
   </ItemGroup>
 
 </Project>
