--- a/PartyPlaylistsTests/PartyPlaylistsTests.csproj
+++ b/PartyPlaylistsTests/PartyPlaylistsTests.csproj
@@ -17,4 +17,8 @@
     <Folder Include="IntegrationTests\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PartyPlaylists\PartyPlaylists\PartyPlaylists.csproj" />
+  </ItemGroup>
+
 </Project>
