Create song list partial

--- a/PartyPlaylists.MVC/PartyPlaylists.MVC.csproj
+++ b/PartyPlaylists.MVC/PartyPlaylists.MVC.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PartyPlaylists\PartyPlaylists\PartyPlaylists.csproj" />
+  </ItemGroup>
+
 </Project>
