--- a/PartyPlaylists.MVC/PartyPlaylists.MVC.csproj
+++ b/PartyPlaylists.MVC/PartyPlaylists.MVC.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+    <UserSecretsId>919e72e4-d85d-4c04-b570-201bd47275e8</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
