--- a/PartyPlaylists/PartyPlaylists/PartyPlaylists.csproj
+++ b/PartyPlaylists/PartyPlaylists/PartyPlaylists.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.1.1" />
     <PackageReference Include="RestSharp" Version="106.10.1" />
     <PackageReference Include="SpotifyApi.NetCore" Version="3.0.2" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.5.0" />
     <PackageReference Include="Xamarin.Forms" Version="4.5.0.495" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.5.2" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
