--- a/PartyPlaylists/PartyPlaylists/appsettings.Development.json
+++ b/PartyPlaylists/PartyPlaylists/appsettings.Development.json
@@ -5,5 +5,11 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "PartyPlaylistConnectionString": ""
+  },
+  "Jwt": {
+    "Key": ""
   }
 }
