Add "AddVoteToSong" method

--- a/PartyPlaylists.MVC/PartyPlaylists.MVC.csproj
+++ b/PartyPlaylists.MVC/PartyPlaylists.MVC.csproj
@@ -28,4 +28,8 @@
     <ProjectReference Include="..\PartyPlaylists\PartyPlaylists\PartyPlaylists.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Room\Components\" />
+  </ItemGroup>
+
 </Project>
