--- a/PartyPlaylists/PartyPlaylists/PartyPlaylists.csproj
+++ b/PartyPlaylists/PartyPlaylists/PartyPlaylists.csproj
@@ -11,6 +11,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20200408200635_addSpotifyAuthCode.cs" />
+    <Compile Remove="Migrations\20200408200635_addSpotifyAuthCode.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="jose-jwt" Version="2.5.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.3" />
