--- a/PartyPlaylistsTests/PartyPlaylistsTests.csproj
+++ b/PartyPlaylistsTests/PartyPlaylistsTests.csproj
@@ -1,4 +1,5 @@
-<Project Sdk="Microsoft.NET.Sdk">
+
+  <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
@@ -18,11 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="IntegrationTests\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\PartyPlaylists\PartyPlaylists\PartyPlaylists.csproj" />
+    <ProjectReference Include="C:\Users\Josh\source\repos\PartyPlaylists\PartyPlaylists\PartyPlaylists\PartyPlaylists.csproj" />
   </ItemGroup>
 
 </Project>
