--- a/PartyPlaylists/PartyPlaylists/PartyPlaylists.csproj
+++ b/PartyPlaylists/PartyPlaylists/PartyPlaylists.csproj
@@ -13,6 +13,10 @@
   <ItemGroup>
     <Compile Remove="Migrations\20200408200635_addSpotifyAuthCode.cs" />
     <Compile Remove="Migrations\20200408200635_addSpotifyAuthCode.Designer.cs" />
+    <Compile Remove="Migrations\20200415002922_UpdateMaxLength.cs" />
+    <Compile Remove="Migrations\20200415002922_UpdateMaxLength.Designer.cs" />
+    <Compile Remove="Migrations\20200415003152_UpdateMaxLength.cs" />
+    <Compile Remove="Migrations\20200415003152_UpdateMaxLength.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
