Refactored SpotifyServices.GetSong to use the track search endpoint from spotify. The plan being that given a unique song Id it will return a song for the appropriate service

--- a/PartyPlaylists.MVC/PartyPlaylists.MVC.csproj
+++ b/PartyPlaylists.MVC/PartyPlaylists.MVC.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <UserSecretsId>919e72e4-d85d-4c04-b570-201bd47275e8</UserSecretsId>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
