--- a/PartyPlaylists/PartyPlaylists.Android/PartyPlaylists.Android.csproj
+++ b/PartyPlaylists/PartyPlaylists.Android/PartyPlaylists.Android.csproj
@@ -76,6 +76,7 @@
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Keys.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
