--- a/PartyPlaylists/PartyPlaylists.Android/PartyPlaylists.Android.csproj
+++ b/PartyPlaylists/PartyPlaylists.Android/PartyPlaylists.Android.csproj
@@ -46,8 +46,16 @@
     <WarningLevel>4</WarningLevel>
     <AndroidManagedSymbols>true</AndroidManagedSymbols>
     <AndroidUseSharedRuntime>false</AndroidUseSharedRuntime>
+    <AotAssemblies>false</AotAssemblies>
+    <EnableLLVM>false</EnableLLVM>
+    <AndroidEnableProfiledAot>false</AndroidEnableProfiledAot>
+    <BundleAssemblies>false</BundleAssemblies>
+    <AndroidLinkMode>None</AndroidLinkMode>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ClassLibrary1">
+      <HintPath>..\..\ClassLibrary1\bin\Debug\ClassLibrary1.dll</HintPath>
+    </Reference>
     <Reference Include="Mono.Android" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -58,6 +66,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client.Core">
+      <Version>3.1.4</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore">
       <Version>3.1.3</Version>
     </PackageReference>
@@ -76,6 +87,7 @@
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Doot.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -112,7 +124,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PartyPlaylists\PartyPlaylists.csproj">
-      <Project>{8AE65649-D838-4293-8A3E-BA9F725CE44C}</Project>
+      <Project>{fce6125e-d412-41d4-8ac8-b4c5e6a54dde}</Project>
       <Name>PartyPlaylists</Name>
     </ProjectReference>
   </ItemGroup>
