--- a/PartyPlaylists/PartyPlaylists.Android/PartyPlaylists.Android.csproj
+++ b/PartyPlaylists/PartyPlaylists.Android/PartyPlaylists.Android.csproj
@@ -96,6 +96,7 @@
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SpotifyCallBack.cs" />
     <Compile Include="SpotifyMobileSDK.cs" />
   </ItemGroup>
   <ItemGroup>
