--- a/PartyPlaylists/PartyPlaylists.iOS/PartyPlaylists.iOS.csproj
+++ b/PartyPlaylists/PartyPlaylists.iOS/PartyPlaylists.iOS.csproj
@@ -27,6 +27,7 @@
     <MtouchArch>x86_64</MtouchArch>
     <MtouchLink>None</MtouchLink>
     <MtouchDebug>true</MtouchDebug>
+    <CodesignKey>iPhone Developer</CodesignKey>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhoneSimulator' ">
     <DebugType>none</DebugType>
@@ -69,6 +70,9 @@
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="CustomConfig.cs" />
+    <Compile Include="SpotifyMobileSDK.cs" />
+    <Compile Include="FileStorage.cs" />
   </ItemGroup>
   <ItemGroup>
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Contents.json">
@@ -123,6 +127,9 @@
     <BundleResource Include="Resources\xamarin_logo%402x.png" />
     <BundleResource Include="Resources\xamarin_logo%403x.png" />
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
+    <BundleResource Include="..\PartyPlaylists\appsettings.json">
+      <Link>appsettings.json</Link>
+    </BundleResource>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -141,7 +148,7 @@
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
     <ProjectReference Include="..\PartyPlaylists\PartyPlaylists.csproj">
-      <Project>{8AE65649-D838-4293-8A3E-BA9F725CE44C}</Project>
+      <Project>{FCE6125E-D412-41D4-8AC8-B4C5E6A54DDE}</Project>
       <Name>PartyPlaylists</Name>
     </ProjectReference>
   </ItemGroup>
