Read/write generated jwtoken to appsettings.json file for accessible reading from iOS and android devices

--- a/PartyPlaylists/PartyPlaylists.iOS/PartyPlaylists.iOS.csproj
+++ b/PartyPlaylists/PartyPlaylists.iOS/PartyPlaylists.iOS.csproj
@@ -27,7 +27,7 @@
     <MtouchArch>x86_64</MtouchArch>
     <MtouchLink>None</MtouchLink>
     <MtouchDebug>true</MtouchDebug>
-    <CodesignKey>iPhone Developer</CodesignKey>
+    <CodesignKey>Apple Development: Johnjaskaran Singh (YQJQ3U3U7S)</CodesignKey>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhoneSimulator' ">
     <DebugType>none</DebugType>
